<resources>
    <string name="app_name">My Songs</string>

    <!--Songs List-->
    <string name="song_list_description">When you open the app a list with all your songs appears below.
        If you don\'t have any songs, a message will appear telling you to add songs by tapping
        the fab + button. When you do so, a new activity opens to add songs. In this new activity you
        can scan your device for media files, or you can visit various online music stores to buy new songs.</string>

    <!--Song Details-->
    <string name="song_details_similar_songs">Similar Songs</string>
    <string name="song_details_description">This screen shows the details for the selected song.
    From here you can play the song by tapping on the Play Now button. You can also see similar songs in a
    horizontal list. If you tap a similar song a new screen will open with the details for that song.</string>
    <string name="song_details_content_description_album_art">The album\'s cover art</string>
    <string name="song_details_play_now">Play Now</string>

    <!--Song Item-->
    <string name="song_name_placeholder">Song Name</string>
    <string name="song_author_placeholder">Song Author</string>
    <string name="song_description_placeholder">Cupcake ipsum dolor sit. Amet croissant jelly-o
        croissant bear claw bear claw. Chocolate jujubes gummies jelly-o sweet roll dragée chocolate.
        Donut cupcake chocolate bar. Sweet candy pastry tootsie roll cake. Dragée jelly beans toffee
        brownie sweet cheesecake pastry.\n\nLemon drops toffee chocolate sesame snaps icing.
        Cotton candy marzipan gingerbread cupcake tiramisu danish powder icing sugar plum.
        Carrot cake chocolate cake tart brownie dragée. Dragée sugar plum sugar plum tiramisu
        gingerbread tootsie roll. Marzipan marzipan sesame snaps tootsie roll cheesecake gingerbread.
        Lollipop marzipan carrot cake. Biscuit halvah brownie cookie candy muffin. Pudding dessert
        gummi bears candy. Pudding icing cotton candy. Jelly gingerbread danish sweet roll jelly-o
        sweet roll ice cream. Tootsie roll jelly-o icing. Bear claw croissant chocolate. Chocolate
        biscuit apple pie chocolate cake bear claw gingerbread gingerbread gummies.\n\nFruitcake
        macaroon marshmallow pie apple pie sweet roll chocolate jelly beans.
        Cupcake liquorice croissant marshmallow cotton candy cotton candy liquorice pastry.
        Lollipop topping cotton candy dragée cake. Tootsie roll brownie biscuit sugar plum
        carrot cake chocolate bar tiramisu candy. Tiramisu jelly beans topping jelly-o
        halvah dragée pudding. Gummi bears cookie jelly candy marshmallow sesame snaps macaroon.
        Pudding chocolate cake dessert. Topping dessert halvah marzipan. Soufflé carrot cake
        topping cheesecake chocolate cake marshmallow caramels.</string>

    <!--Player-->
    <string name="player_now_playing">Now Playing</string>
    <string name="player_play">Play Song</string>
    <string name="player_previous">Go to the previous song</string>
    <string name="player_next">Go to the next song</string>

    <!--Add Songs-->
    <string name="add_songs_description">On this screen you will have the option to add media files
         from your device storage. You will also see a list of online music store where you can buy
        songs.</string>
    <string name="add_songs_from_device">Add songs from your device</string>
    <string name="add_songs_from_store">Buy songs online</string>
    <string name="add_songs_scan_device">Scan device</string>
    <string name="add_songs_store_name_placeholder">Store Name</string>
    <string name="add_songs_store_url_placeholder">http://musicstore.com</string>
    <string name="add_songs_store_description_placeholder">Hundreds of albums from great artists</string>
</resources>
