<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFECB3"
        android:padding="16dp"
        android:text="@string/song_details_description" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/image_placeholder_dark_large"
                    android:contentDescription="@string/song_details_content_description_album_art"
                    android:scaleType="center" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginBottom="8dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:layout_marginStart="8dp"
                        android:paddingTop="16dp"
                        android:text="@string/song_name_placeholder"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:layout_marginStart="8dp"
                        android:paddingTop="4dp"
                        android:text="@string/song_author_placeholder"
                        android:textSize="16sp"
                        android:textStyle="bold" />


                    <Button
                        style="?android:attr/buttonBarButtonStyle"
                        android:gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableEnd="@drawable/media_controls_play_dark_small"
                        android:paddingBottom="2dp"
                        android:paddingTop="2dp"
                        android:text="@string/song_details_play_now" />


                </LinearLayout>


            </LinearLayout>


            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/song_details_similar_songs"
                android:textSize="18sp" />

            <HorizontalScrollView
                android:id="@+id/related_albums"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp">

                <include layout="@layout/related_songs_list" />
            </HorizontalScrollView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="16dp"
                android:text="@string/song_description_placeholder" />

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_weight="1">

        <include layout="@layout/player" />
    </LinearLayout>
</LinearLayout>