<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/store_item"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:onClick="openStore"
    android:orientation="horizontal"
    android:paddingBottom="16dp"
    android:paddingTop="16dp">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_gravity="center"
        android:background="@drawable/image_placeholder_dark" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/store_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_songs_store_name_placeholder"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/store_url"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/add_songs_store_url_placeholder"
            android:textColor="#00796B"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/store_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/add_songs_store_description_placeholder"
            android:textSize="12sp" />
    </LinearLayout>

</LinearLayout>